; ModuleID = '/home/carl/AnghaBench/mozjpeg/extr_turbojpeg.c_tjCompress.c'
source_filename = "/home/carl/AnghaBench/mozjpeg/extr_turbojpeg.c_tjCompress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TJ_YUV = common dso_local global i32 0, align 4
@TJFLAG_NOREALLOC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tjCompress(i32 %0, i8* %1, i32 %2, i32 %3, i32 %4, i32 %5, i8* %6, i64* %7, i32 %8, i32 %9, i32 %10) #0 {
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i8*, align 8
  %19 = alloca i64*, align 8
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i64, align 8
  store i32 %0, i32* %12, align 4
  store i8* %1, i8** %13, align 8
  store i32 %2, i32* %14, align 4
  store i32 %3, i32* %15, align 4
  store i32 %4, i32* %16, align 4
  store i32 %5, i32* %17, align 4
  store i8* %6, i8** %18, align 8
  store i64* %7, i64** %19, align 8
  store i32 %8, i32* %20, align 4
  store i32 %9, i32* %21, align 4
  store i32 %10, i32* %22, align 4
  store i32 0, i32* %23, align 4
  %25 = load i32, i32* %22, align 4
  %26 = load i32, i32* @TJ_YUV, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %46

29:                                               ; preds = %11
  %30 = load i32, i32* %14, align 4
  %31 = load i32, i32* %16, align 4
  %32 = load i32, i32* %20, align 4
  %33 = call i64 @tjBufSizeYUV(i32 %30, i32 %31, i32 %32)
  store i64 %33, i64* %24, align 8
  %34 = load i32, i32* %12, align 4
  %35 = load i8*, i8** %13, align 8
  %36 = load i32, i32* %14, align 4
  %37 = load i32, i32* %15, align 4
  %38 = load i32, i32* %16, align 4
  %39 = load i32, i32* %17, align 4
  %40 = load i32, i32* %22, align 4
  %41 = call i32 @getPixelFormat(i32 %39, i32 %40)
  %42 = load i8*, i8** %18, align 8
  %43 = load i32, i32* %20, align 4
  %44 = load i32, i32* %22, align 4
  %45 = call i32 @tjEncodeYUV2(i32 %34, i8* %35, i32 %36, i32 %37, i32 %38, i32 %41, i8* %42, i32 %43, i32 %44)
  store i32 %45, i32* %23, align 4
  br label %61

46:                                               ; preds = %11
  %47 = load i32, i32* %12, align 4
  %48 = load i8*, i8** %13, align 8
  %49 = load i32, i32* %14, align 4
  %50 = load i32, i32* %15, align 4
  %51 = load i32, i32* %16, align 4
  %52 = load i32, i32* %17, align 4
  %53 = load i32, i32* %22, align 4
  %54 = call i32 @getPixelFormat(i32 %52, i32 %53)
  %55 = load i32, i32* %20, align 4
  %56 = load i32, i32* %21, align 4
  %57 = load i32, i32* %22, align 4
  %58 = load i32, i32* @TJFLAG_NOREALLOC, align 4
  %59 = or i32 %57, %58
  %60 = call i32 @tjCompress2(i32 %47, i8* %48, i32 %49, i32 %50, i32 %51, i32 %54, i8** %18, i64* %24, i32 %55, i32 %56, i32 %59)
  store i32 %60, i32* %23, align 4
  br label %61

61:                                               ; preds = %46, %29
  %62 = load i64, i64* %24, align 8
  %63 = load i64*, i64** %19, align 8
  store i64 %62, i64* %63, align 8
  %64 = load i32, i32* %23, align 4
  ret i32 %64
}

declare dso_local i64 @tjBufSizeYUV(i32, i32, i32) #1

declare dso_local i32 @tjEncodeYUV2(i32, i8*, i32, i32, i32, i32, i8*, i32, i32) #1

declare dso_local i32 @getPixelFormat(i32, i32) #1

declare dso_local i32 @tjCompress2(i32, i8*, i32, i32, i32, i32, i8**, i64*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
